United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7125723 [macosx] painting artifacts after running SwingSet2 with jdk7u-osx build
7125723 : [macosx] painting artifacts after running SwingSet2 with jdk7u-osx build

Details
Type:
Bug
Submit Date:
2011-12-29
Status:
Closed
Updated Date:
2012-05-05
Project Name:
JDK
Resolved Date:
2012-03-05
Component:
client-libs
OS:
os_x
Sub-Component:
2d
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
7u4

Related Reports

Sub Tasks

Description
Attached screenshot demonstrates the problem.

                                    

Comments
SUGGESTED FIX

http://hg.openjdk.java.net/jdk7u/jdk7u-osx/jdk/rev/9dfe50f456be
                                     
2012-01-17
SUGGESTED FIX

Consider pushing the missing changeset to jdk7u-osx.
                                     
2011-12-29
EVALUATION

The issue isn't reproducible with macosx-port build and the cause of the issue is a missing changeset after syncing from macosx-port to jdk7u-osx

http://hg.openjdk.java.net/macosx-port/macosx-port/jdk/rev/50b8fef5df7d
                                     
2011-12-29



Hardware and Software, Engineered to Work Together