7125723: [macosx] painting artifacts after running SwingSet2 with jdk7u-osx build Reviewed-by: bae